# stream_processor

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
infrastructure/: docker-compose.yml
infrastructure/scripts/: config.sh  provision.sh
infrastructure/terraform/: .terraform.lock.hcl  backend.config  buckets.tf  main.tf  networks.tf  pubsub.tf  variables.tf  versions.tf
infrastructure/terraform/states/lateral-balm-318212/: terraform.tfstate
stream_processor/beam/: stream_processor.py
stream_processor/beam/pipeline_utils/: pipeline_options_builder.py  stream_processor_dofns.py
stream_processor/beam/schemas/: pageview.py
stream_processor/data/: sample_aggregates.txt  sample_passthrough.txt
stream_processor/dataflow/: setup.py  stream_processor.py
stream_processor/dataflow/pipeline_utils/: pipeline_options_builder.py  stream_processor_dofns.py
stream_processor/publishers/: data_generator.py  kafka_publisher.py  pubsub_publisher.py
tests/: test_stream_processor.py
