[tool.poetry]
name = "stream_processor"
version = "0.1.0"
description = "Pipeline for processing real-time web-events"
authors = ["Ope Banwo <opeoluwabanwo@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-beam = {extras = ["gcp"], version = "2.30"}
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
isort = "^5.3.0"
pep8-naming = "^0.11.1"
pre-commit = "^2.6.0"
ipython = "^7.17.0"
ipykernel = "^5.3.4"
pytest-cov = "^2.10.0"
safety = "^1.9.0"
Faker = "^8.8.2"
jsonschema = "^3.2.0"
kafka-python = "^2.0.2"

[tool.black]
language_version = "python3.8"

[tool.flake]
exclude = "tests/"

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
indent = "    "
line_length = 88
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
